fix: Rollback to previous working version. The latest addition from upstream is buggy.

--- a/extension/options.html
+++ b/extension/options.html
@@ -1,8 +1,8 @@
-<html><head>
+<html>
+  <head>
     <script src="options.js" type="module"></script>
   </head>
   <body>
     <options-form></options-form>
-  
-
-</body></html>
+  </body>
+</html>
